--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,14 @@
         <postgresql.version>42.7.2</postgresql.version>
         <jakarta.xml.bind-api.version>4.0.1</jakarta.xml.bind-api.version>
         <mockito-inline.version>3.11.2</mockito-inline.version>
-        <junit-jupiter.version>5.7.1</junit-jupiter.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.version>0.1.0-SNAPSHOT</project.version>
+        <maven-cucumber-reporting.version>4.11.2</maven-cucumber-reporting.version>
+        <archunit.version>1.3.0</archunit.version>
+        <!--skipBDD>${skipTests}</skipBDD-->
+        <skipBDD>true</skipBDD>
+
 
         <!-- PLUGIN -->
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -63,6 +70,11 @@
     </build>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
             <!-- this project's own modules -->
             <dependency>
                 <groupId>org.apache.causeway.domox</groupId>
@@ -84,6 +96,28 @@
                 <groupId>org.apache.causeway.viewer</groupId>
                 <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
                 <version>${causeway.version}</version>
+            </dependency>
+
+            <!-- Spring -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>5.3.18</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>jakarta.inject</groupId>
+                <artifactId>jakarta.inject-api</artifactId>
+                <version>2.0.1</version>
             </dependency>
 
             <!-- used components -->
@@ -117,40 +151,86 @@
             <!-- test support -->
             <dependency>
                 <groupId>com.tngtech.archunit</groupId>
+                <artifactId>archunit</artifactId>
+                <version>${archunit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.tngtech.archunit</groupId>
                 <artifactId>archunit-junit5-api</artifactId>
                 <version>${archunit.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.tngtech.archunit</groupId>
                 <artifactId>archunit-junit5-engine</artifactId>
                 <version>${archunit.version}</version>
-                <scope>test</scope>
             </dependency>
 
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <scope>test</scope>
-                <version>${junit-jupiter.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-inline</artifactId>
-                <version>${mockito-inline.version}</version>
-                <scope>test</scope>
+                <groupId>com.github.kittinunf.fuel</groupId>
+                <artifactId>fuel</artifactId>
+                <version>${fuel.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.mockito</groupId>
-                <artifactId>mockito-junit-jupiter</artifactId>
-                <version>5.3.1</version>
-                <scope>test</scope>
+                <groupId>com.github.kittinunf.fuel</groupId>
+                <artifactId>fuel-json</artifactId>
+                <version>${fuel.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.kittinunf.result</groupId>
+                <artifactId>result</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.tika</groupId>
+                <artifactId>tika-core</artifactId>
+                <version>${tika.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.googlecode.json-simple</groupId>
+                <artifactId>json-simple</artifactId>
+                <version>1.1.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains</groupId>
+                <artifactId>annotations</artifactId>
+                <version>13.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>33.1.0-jre</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>${spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.24.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.approvaltests</groupId>
+                <artifactId>approvaltests</artifactId>
+                <version>23.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.deliveredtechnologies</groupId>
+                <artifactId>rulebook-core</artifactId>
+                <version>0.12</version>
+            </dependency>
+            <dependency>
+                <groupId>com.deliveredtechnologies</groupId>
+                <artifactId>rulebook-spring</artifactId>
+                <version>0.12</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
