--- a/domox-service/pom.xml
+++ b/domox-service/pom.xml
@@ -30,7 +30,6 @@
             <scope>test</scope>
         </dependency>
 
-
         <!-- to be removed, once SparkNLP works -->
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
@@ -60,6 +59,11 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
         </dependency>
 
         <dependency>
