--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 
     <properties>
         <project.version>0.1.0-SNAPSHOT</project.version>
-        <causeway.version>3.0.0</causeway.version>
-        <stanford-corenlp.version>4.5.6</stanford-corenlp.version>
+        <causeway.version>3.3.0-SNAPSHOT</causeway.version>
+        <stanford-corenlp.version>4.5.8</stanford-corenlp.version>
         <lombok.version>1.18.32</lombok.version>
         <jmock.version>2.12.0</jmock.version>
         <file.encoding>UTF-8</file.encoding>
-        <kotlin.version>1.8.0</kotlin.version>
+        <kotlin.version>1.9.25</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <fuel.version>2.3.1</fuel.version>
@@ -27,7 +27,6 @@
         <!--skipBDD>${skipTests}</skipBDD-->
         <skipBDD>true</skipBDD>
 
-
         <!-- PLUGIN -->
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
     </properties>
@@ -35,7 +34,7 @@
     <parent>
         <groupId>org.apache.causeway.app</groupId>
         <artifactId>causeway-app-starter-parent</artifactId>
-        <version>3.0.0</version>
+        <version>3.3.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
@@ -48,23 +47,45 @@
     <packaging>pom</packaging>
 
     <build>
-
         <plugins>
             <plugin>
-                <groupId>org.sahli.asciidoc.confluence.publisher</groupId>
-                <artifactId>asciidoc-confluence-publisher-maven-plugin</artifactId>
-                <version>0.14.0</version>
-                <configuration>
-                    <asciidocRootFolder>docs</asciidocRootFolder>
-                    <rootConfluenceUrl>${rootConfluenceUrl}</rootConfluenceUrl>
-                    <spaceKey>${spaceKey}</spaceKey>
-                    <ancestorId>${ancestorId}</ancestorId>
-                    <username>${username}</username>
-                    <password>${password}</password>
-                    <attributes>
-                        <confluencePublisherVersion>${project.version}</confluencePublisherVersion>
-                    </attributes>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.5.0</version> <!-- Use the latest stable version -->
+                <executions>
+                    <execution>
+                        <id>enforce-constraints</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <!-- Require a specific Maven version -->
+                                <requireMavenVersion>
+                                    <version>[3.9.9,)</version> <!-- Require Maven 3.6 or higher -->
+                                </requireMavenVersion>
+                                <!-- Require a specific Java version -->
+                                <requireJavaVersion>
+                                    <version>[17,)</version> <!-- Require Java 11 or higher -->
+                                </requireJavaVersion>
+                                <!-- Require a specific operating system family -->
+                                <!--requireOS>
+                                    <family>windows</family>
+                                </requireOS-->
+                                <!-- Enforce dependency convergence -->
+                                <dependencyConvergence/>
+                                <!-- Banned dependencies example -->
+                                <bannedDependencies>
+                                    <excludes>
+                                        <exclude>org.example:old-library
+                                        </exclude> <!-- Example of a banned dependency -->
+                                    </excludes>
+                                    <message>Banned dependency detected!</message>
+                                </bannedDependencies>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -93,8 +114,60 @@
             </dependency>
             <!-- Causeway-->
             <dependency>
+                <groupId>org.apache.causeway.core</groupId>
+                <artifactId>causeway-applib</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.core</groupId>
+                <artifactId>causeway-core-config</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.causeway.viewer</groupId>
                 <artifactId>causeway-viewer-restfulobjects-jaxrsresteasy</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.viewer</groupId>
+                <artifactId>causeway-viewer-wicket-viewer</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.valuetypes</groupId>
+                <artifactId>causeway-valuetypes-asciidoc-metamodel</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.viewer</groupId>
+                <artifactId>causeway-viewer-graphql-viewer</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.commons</groupId>
+                <artifactId>causeway-commons</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.viewer</groupId>
+                <artifactId>causeway-viewer-wicket-ui</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.extensions</groupId>
+                <artifactId>causeway-extensions-fullcalendar-wicket-ui</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.causeway.persistence</groupId>
+                <artifactId>causeway-persistence-jpa-applib</artifactId>
+                <version>${causeway.version}</version>
+            </dependency>
+            <!-- Causeway testing-->
+            <dependency>
+                <groupId>org.apache.causeway.testing</groupId>
+                <artifactId>causeway-testing-fixtures-applib</artifactId>
+                <scope>compile</scope>
                 <version>${causeway.version}</version>
             </dependency>
 
@@ -235,6 +308,41 @@
                 <groupId>com.deliveredtechnologies</groupId>
                 <artifactId>rulebook-spring</artifactId>
                 <version>0.12</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.4.0-b180830.0359</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20250107</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-core</artifactId>
+                <version>2.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm-commons</artifactId>
+                <version>9.7.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.asciidoctor</groupId>
+                <artifactId>asciidoctorj-api</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>6.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
             </dependency>
 
         </dependencies>
