--- a/docker/corenlp/Dockerfile
+++ b/docker/corenlp/Dockerfile
@@ -9,11 +9,13 @@ ENV http_proxy="http://zscaler.proxy.int.kn:80" \
 
 # Set environment variables
 ENV CORENLP_VERSION=4.5.9
-ENV CORENLP_DIR=/opt/corenlp
+ENV CORENLP_DIR=/app/corenlp
 ENV CORENLP_URL=https://nlp.stanford.edu/software/stanford-corenlp-${CORENLP_VERSION}.zip
+#ENV MODELS_DIR=/app/models
 
 # Create directory for CoreNLP
 RUN mkdir -p $CORENLP_DIR
+    #&& mkdir -p $MODELS_DIR
 
 # Download and extract CoreNLP
 RUN apk add --no-cache curl unzip && \
@@ -21,9 +23,17 @@ RUN apk add --no-cache curl unzip && \
     unzip /tmp/corenlp.zip -d $CORENLP_DIR && \
     rm /tmp/corenlp.zip
 
+# Extract CoreNLP models
+#RUN unzip $CORENLP_DIR/stanford-corenlp-${CORENLP_VERSION}/stanford-corenlp-${CORENLP_VERSION}-models.jar -d /tmp
+#RUN ls -laR /tmp
+#COPY /tmp/edu/stanford/nlp/models/parser/nndep/english_UD.gz $MODELS_DIR/
+
+#ENV PATH=$MODELS_DIR:$PATH
+
 # Set up classpath environment variable
-ENV CLASSPATH=$CORENLP_DIR/stanford-corenlp-${CORENLP_VERSION}/*
-ENV CLASSPATH=$CLASSPATH:$CORENLP_DIR/stanford-corenlp-${CORENLP_VERSION}/lib/*
+#ENV CLASSPATH=$CORENLP_DIR/stanford-corenlp-${CORENLP_VERSION}/*
+#ENV CLASSPATH=$CLASSPATH:$CORENLP_DIR/stanford-corenlp-${CORENLP_VERSION}/*
+#ENV CLASSPATH=$CLASSPATH:$MODELS_DIR
 
 # Expose port 9000
 EXPOSE 9000
