--- a/domox-webapp/src/main/resources/application.yml
+++ b/domox-webapp/src/main/resources/application.yml
@@ -70,8 +70,10 @@ causeway:
 
   persistence:
     schema:
-      auto-create-schemas: domox
+      #auto-create-schemas: domox
       create-schema-sql-template: "CREATE SCHEMA IF NOT EXISTS %S"
+      #create-schema-sql-template: DROP SCHEMA domox CASCADE
+
 
 resteasy:
   jaxrs:
